--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "vue-cli-service serve"
+    "start": "npm run serve"
   },
   "engines": {
     "node": "14.x"
