--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^2.8.0",
     "es6-promise": "^4.2.6",
     "increase-memory-limit": "^1.0.6",
+    "magento2-rest-client": "github:DivanteLtd/magento2-rest-client",
     "node-sass": "^4.14.1",
     "pe7-icon": "^1.0.4",
     "perfect-scrollbar": "^1.4.0",
